<resources>
    <string name="app_name">4Chat</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="welcome_to_4chat">Welcome to 4Chat</string>
    <string name="reg_username">Username</string>
    <string name="reg_email">Email</string>
    <string name="reg_password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="settings">Settings</string>
    <string name="users">Users</string>
    <string name="log_out">Log Out</string>
    <string name="main_page">Main Page</string>
    <string name="i_have_an_account">I have an account</string>
    <string name="create_new_account">Create New Account</string>
    <string name="login_to_your_account">Login to Your Account</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_image">CHANGE IMAGE</string>
    <string name="change_status">CHANGE STATUS</string>
    <string name="display_name">Display Name</string>
    <string name="default_message">Hi! Im using 4Chat Chat App!</string>
    <string name="your_status">Your status</string>
    <string name="save_changes">Save Changes</string>
    <string name="display_profile_name">Display Profile Name</string>
    <string name="current_user_status">Current User Status</string>
    <string name="send_friend_request">SEND FRIEND REQUEST</string>
    <string name="decline_friend_request">DECLINE FRIEND REQUEST</string>
</resources>